añadido run configurations e instrucciones para configuracion de proyecto